base/edge/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: edge
  annotations:
    cert-manager.io/cluster-issuer: cluster-issuer
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 35.209.166.2
  listeners:
    - hostname: "*.promotesudbury.ca"
      name: http-listener
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All

    - hostname: "*.promotesudbury.ca"
      name: https-listener
      protocol: HTTPS
      port: 2000
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-certificate
