base/edge/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-api
  namespace: edge
spec:
  parentRefs:
    - name: gateway
      sectionName: https-listener
  hostnames:
    - "k8s.promotesudbury.ca"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kubernetes
          namespace: default
          port: 8443
---
